@@ -10,6 +10,10 @@ Release 1.0 (in development)
 
 * Added a manual page builder.
 
+* In HTML output, inline roles now get a CSS class with their name,
+  allowing styles to customize their appearance.  Domain-specific
+  roles get two classes, ``domain`` and ``domain-rolename``.
+
 * New more compact doc field syntax is now recognized:
   ``:param type name: description``.
 
